# fastai-template

./: .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  compose.yml  example.env  pyproject.toml  workspace.toml
bases/fastai/api/: __init__.py  core.py  depenedencies.py
bases/fastai/api/routes/: health.py
bases/fastai/worker/: __init__.py  core.py
components/fastai/admin_v1/: __init__.py  core.py  dependencies.py  documents.py  health.py  users.py
components/fastai/agents/: __init__.py  core.py  dependencies.py  schemas.py  settings.py
components/fastai/api_v1/: __init__.py  authentication.py  chats.py  conversations.py  core.py  dependencies.py  health.py  items.py
components/fastai/auth/: __init__.py  core.py  models.py  schemas.py  settings.py  token_service.py
components/fastai/chats/: __init__.py  models.py  schemas.py
components/fastai/database/: __init__.py  core.py
components/fastai/documents/: __init__.py  models.py  schemas.py
components/fastai/embeddings/: __init__.py  core.py  exceptions.py  models.py  providers.py  schemas.py  settings.py
components/fastai/events/: __init__.py  core.py  schemas.py  settings.py
components/fastai/extraction/: __init__.py  core.py
components/fastai/items/: __init__.py  models.py  schemas.py
components/fastai/logger/: __init__.py  core.py  middleware.py
components/fastai/logging/: __init__.py  middleware.py
components/fastai/storage/: __init__.py  core.py
components/fastai/subscribers_v1/: __init__.py  core.py  dependencies.py  documents.py
components/fastai/users/: __init__.py  exceptions.py  models.py  schemas.py
components/fastai/utils/: __init__.py  dependencies.py  fields.py  models.py  settings.py
development/: init.sql  populate.py
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  eslint.config.ts  nginx.conf  package.json  vite.config.ts
frontend/src/: main.ts  style.css
frontend/src/components/: ThemeSwitcher.vue
frontend/src/components/ui/: index.ts
frontend/src/components/ui/dialog/: Dialog.vue  DialogContent.vue  DialogDescription.vue  DialogFooter.vue  DialogTitle.vue  index.ts
frontend/src/features/admin/: routes.ts
frontend/src/features/admin/components/: AdminDocumentUploadDialog.vue  AdminDocumentsTable.vue  AdminUsersTable.vue
frontend/src/features/admin/composables/: useAdminDocuments.ts  useAdminUsers.ts
frontend/src/features/admin/services/: admin.service.ts  documents.service.ts
frontend/src/features/admin/stores/: admin.store.ts  documents.store.ts
frontend/src/features/admin/types/: admin.types.ts  documents.types.ts
frontend/src/features/admin/views/: AdminDocumentDetailView.vue  AdminDocumentsView.vue  AdminEmbeddingsView.vue  AdminUsersView.vue
frontend/src/features/auth/: routes.ts
frontend/src/features/auth/components/: LoginForm.vue
frontend/src/features/auth/composables/: useLogin.ts
frontend/src/features/auth/services/: auth.service.ts
frontend/src/features/auth/stores/: auth.store.ts
frontend/src/features/auth/types/: auth.types.ts
frontend/src/features/auth/views/: LoginView.vue
frontend/src/features/chat/: routes.ts
frontend/src/features/chat/components/: ChatInput.vue  ChatMessageList.vue  ConversationList.vue
frontend/src/features/chat/composables/: useChat.ts
frontend/src/features/chat/services/: chat.service.ts
frontend/src/features/chat/stores/: chat.store.ts
frontend/src/features/chat/types/: chat.types.ts
frontend/src/features/chat/views/: ChatView.vue
frontend/src/features/dashboard/components/: DashboardHeader.vue  DashboardSidebar.vue
frontend/src/features/dashboard/composables/: useDashboard.ts
frontend/src/features/dashboard/stores/: dashboard.store.ts
frontend/src/features/dashboard/types/: dashboard.types.ts
frontend/src/features/dashboard/views/: DashboardHomeView.vue  DashboardView.vue
frontend/src/features/items/: routes.ts
frontend/src/features/items/components/: ItemForm.vue  ItemsTable.vue
frontend/src/features/items/composables/: useItems.ts
frontend/src/features/items/services/: item.service.ts
frontend/src/features/items/stores/: item.store.ts
frontend/src/features/items/types/: item.types.ts
frontend/src/features/items/views/: ItemDetailView.vue  ItemsView.vue
frontend/src/lib/: api.ts
frontend/src/router/: index.ts
frontend/src/stores/: theme.store.ts
projects/api/: Dockerfile  pyproject.toml
projects/api/alembic/: env.py  script.py.mako
projects/api/alembic/versions/: 4fd50ef2630a_add_embeddings_table.py  a1b2c3d4e5f6_add_documents_table.py  f14b01c3e80c_project_init.py
projects/worker/: Dockerfile  pyproject.toml
test/: conftest.py
test/bases/fastai/api/: test_core.py  test_health.py
test/components/fastai/admin_v1/: conftest.py  test_documents.py  test_users.py
test/components/fastai/agents/: conftest.py  test_core.py  test_routes.py
test/components/fastai/api_v1/: conftest.py  test_authentication.py  test_chats.py  test_conversations.py  test_items.py
test/components/fastai/auth/: test_core.py  test_models.py  test_refresh_token_models.py  test_token_service.py
test/components/fastai/chats/: test_models.py
test/components/fastai/database/: test_core.py
test/components/fastai/documents/: test_models.py
test/components/fastai/embeddings/: test_core.py  test_models.py  test_providers.py
test/components/fastai/events/: test_publisher.py
test/components/fastai/extraction/: test_core.py
test/components/fastai/items/: test_core.py  test_models.py
test/components/fastai/logging/: test_core.py
test/components/fastai/storage/: test_s3_storage.py
test/components/fastai/subscribers_v1/: conftest.py  test_documents.py
test/components/fastai/users/: test_core.py  test_login_tracking.py  test_models.py
test/components/fastai/utils/: test_core.py
