[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "authlib>=1.6.0",
    "fastapi>=0.115.12",
    "gunicorn>=23.0.0",
    "joserfc>=1.6.0",
    "logfire[fastapi,sqlalchemy]>=3.16.1",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "sqlalchemy[asyncio]>=2.0.41",
    "sqlmodel>=0.0.24",
    "starlette>=0.46.2",
    "structlog>=25.3.0",
    "pwdlib[argon2]>=0.3.0",
    "uvicorn>=0.34.2",
    "pydantic-ai-slim[logfire,openai,openrouter,anthropic]>=0.2.12",
]

[tool.hatch.build.hooks.polylith-bricks]

[tool.polylith.bricks]
"../../bases/fastai/api" = "fastai/api"
"../../components/fastai/database" = "fastai/database"
"../../components/fastai/logger" = "fastai/logger"
"../../components/fastai/utils" = "fastai/utils"
"../../components/fastai/auth" = "fastai/auth"
"../../components/fastai/users" = "fastai/users"
"../../components/fastai/admin_v1" = "fastai/admin_v1"
"../../components/fastai/api_v1" = "fastai/api_v1"
"../../components/fastai/items" = "fastai/items"
"../../components/fastai/agents" = "fastai/agents"
"../../components/fastai/chats" = "fastai/chats"
