[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fastai"]

[project]
name = "worker"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "faststream[nats]>=0.6.7",
    "docling>=2.86.0",
    "sqlalchemy[asyncio]>=2.0.41",
    "sqlmodel>=0.0.24",
    "structlog>=25.3.0",
    "pydantic-settings>=2.9.1",
    "pydantic-ai-slim[logfire,openai,openrouter,anthropic]>=1.67.0",
    "asyncpg>=0.31.0",
    "pgvector>=0.4.1",
    "aioboto3>=15.5.0",
    "types-aioboto3[essential]>=15.5.0",
    "fastapi>=0.115.12",
    "torch>=2.2.2",
    "torchvision>=0.22.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.hatch.build.hooks.polylith-bricks]

[tool.polylith.bricks]
"../../bases/fastai/worker" = "fastai/worker"
"../../components/fastai/database" = "fastai/database"
"../../components/fastai/utils" = "fastai/utils"
"../../components/fastai/events" = "fastai/events"
"../../components/fastai/extraction" = "fastai/extraction"
"../../components/fastai/embeddings" = "fastai/embeddings"
"../../components/fastai/documents" = "fastai/documents"
"../../components/fastai/logger" = "fastai/logger"
"../../components/fastai/subscribers_v1" = "fastai/subscribers_v1"
"../../components/fastai/storage" = "fastai/storage"
